--- a/3B-WEB/assets/base/mobile.css
+++ b/3B-WEB/assets/base/mobile.css
@@ -39,7 +39,7 @@ table {border-collapse: collapse;border-spacing: 0;}
 .home-mobile .title {position: relative;margin-bottom: 8px;}
 .home-mobile .title h3 {font-size: 15px;font-weight: 500;line-height: 22px;text-transform: uppercase;}
 .home-mobile .title h3 img {max-height: 18px;vertical-align: top;}
-.home-mobile .title a {position: absolute;top: 0;right: 0;color: #E33806;font-size: 14px;font-weight: 500;line-height: 22px;}
+.home-mobile .title a {position: absolute;top: 0;right: 0;color: #6633B9;font-size: 14px;font-weight: 500;line-height: 22px;}
 
 .home-mobile .title-page {position: fixed;top: 0;left: 0;right: 0;z-index: 99;background: #FFFFFF;padding: 12px 12px 0;box-shadow: 0px 2px 8px 0px rgba(0, 0, 0, 0.2)}
 .home-mobile .title-page h3 {font-size: 15px;font-weight: 500;line-height: 22px;text-transform: uppercase;color: #EC5229;text-align: center;margin-bottom: 12px;padding: 0 3px;}
@@ -338,7 +338,7 @@ table {border-collapse: collapse;border-spacing: 0;}
 .home-mobile .last-section .actions .btn {font-size: 13px;padding: 4px 12px;margin-right: 4px;}
 .home-mobile .last-section .actions .btn:last-child {margin-right: 0;}
 
-.home-mobile header {background: linear-gradient(180deg, #6633B9 0%, #C563EA 100%);}
+.home-mobile header {background: linear-gradient(180deg, #6633B9 23.7%, #926AD3 80.86%);}
 .home-mobile header .header-top {padding-top: 8px;padding-bottom: 8px;position: relative;}
 .home-mobile header .row {display: flex;align-items: center;}
 .home-mobile header .logo {padding: 5px 0;}
@@ -348,32 +348,37 @@ table {border-collapse: collapse;border-spacing: 0;}
 .home-mobile header .search-box .input-group {width: 100%;}
 .home-mobile header .search-box .form-control {height: 34px;border: none;border-radius: 4px;padding: 6px 16px;}
 .home-mobile header .search-box .input-group-btn {position: absolute;right: 2px;top: 3px;width: auto;z-index: 99;}
-.home-mobile header .search-box .input-group-btn .btn {background: #C563EA;padding: 4px 8px;border-radius: 4px;}
+.home-mobile header .search-box .input-group-btn .btn {background: #6632B9;padding: 4px 8px;border-radius: 4px;}
 .home-mobile header .search-box .input-group-btn .btn img {width: 18px;}
 .home-mobile header .cart {display: flex;align-items: flex-end;justify-content: space-around;}
 .home-mobile header .cart span {display: block;color: #F2F2F2;font-size: 10px;line-height: 15px;font-style: normal;font-weight: normal;text-transform: capitalize;}
 .home-mobile header .cart img {margin-left: -3px;width: 20px;}
 .home-mobile header .cart a {position: relative;}
-.home-mobile header .cart a .total {position: absolute;top: -10px;right: 0;background: #FF2028;width: 20px;height: 20px;border-radius: 50%;font-size: 10px;line-height: 22px;text-align: center;}
+.home-mobile header .cart a .total {position: absolute;top: -10px;right: 0;background: linear-gradient(87.62deg, #6B39BD 16.73%, #986BE0 83.07%);width: 20px;height: 20px;border-radius: 50%;font-size: 10px;line-height: 22px;text-align: center;}
 .home-mobile header .banner img {height: 155px;max-height: 155px;width: 100%;}
 .home-mobile header .banner-ads {margin-bottom: 12px;border-radius: 8px;overflow: hidden;}
 .home-mobile header .banner-ads img {width: 100%;}
 
 .home-mobile .header-content {padding: 12px;}
 .home-mobile .header-content .hotsale-today {background: #FFFFFF;border-radius: 8px;padding: 14px 10px;margin-bottom: 12px;}
-.home-mobile .header-content .hotsale-today .title h3 {color: #EC5229;text-transform: capitalize;font-weight: 900;font-style: italic;line-height: 26px;}
-.home-mobile .header-content .hotsale-today .title h3 img {vertical-align: middle;margin-left: 2px;margin-right: -2px;}
+.home-mobile .header-content .hotsale-today .title h3 {color: #6633B9;text-transform: capitalize;font-weight: 900;font-style: italic;line-height: 32px;padding-right: 10px;
+	background: linear-gradient(87.62deg, #6633B9 16.73%, #926AD3 83.07%);
+	background-clip: text;
+	-webkit-background-clip: text;
+	-webkit-text-fill-color: transparent;
+}
+.home-mobile .header-content .hotsale-today .title h3 img {max-height: 100%;}
 .home-mobile .header-content .hotsale-today .flash-time,
-.home-mobile .flash-sale .flash-time {color: #EC5229;display: flex;align-items: center;}
+.home-mobile .flash-sale .flash-time {color: rgba(0, 0, 0, 0.2);display: flex;align-items: center;}
 .home-mobile .header-content .hotsale-today .flash-time span,
-.home-mobile .flash-sale .flash-time span {background: #EC5229;color: #FFFFFF;font-size: 15px;font-weight: 500;line-height: 20px;margin:0 2px;padding: 3px 5px;border-radius: 4px;}
+.home-mobile .flash-sale .flash-time span {background: #000000;color: #FFFFFF;font-size: 15px;font-weight: 500;line-height: 20px;margin:0 2px;padding: 3px 5px;border-radius: 4px;}
 .home-mobile .header-content .hotsale-today .pull-right {display: flex;align-items: center;}
-.home-mobile .header-content .hotsale-today .view-all {font-size: 26px;color: #EC5229;margin: 0 4px;}
+.home-mobile .header-content .hotsale-today .view-all {font-size: 26px;color: #000000;margin: 0 4px;}
 .home-mobile .header-content .hotsale-today .list-item {display: flex;align-items: center;justify-content: flex-start;padding: 0 0 12px;}
 .home-mobile .header-content .hotsale-today .list-item .item {width: 20%;position: relative;margin-right: 12px;}
 .home-mobile .header-content .hotsale-today .list-item .item:last-child {margin-right: 0;}
 .home-mobile .header-content .hotsale-today .list-item .item .p-image {width: 100%;height: 110px;border-radius: 6px;}
-.home-mobile .header-content .hotsale-today .list-item .item .sale-label {position: absolute;top:0;left: 0;background: linear-gradient(102.14deg, #E33806 0%, #EC9229 91.73%);border-radius: 4px 0px 16px;color: #FFFFFF;width: auto;height: auto;font-size: 11px;padding: 4px 10px;}
+.home-mobile .header-content .hotsale-today .list-item .item .sale-label {position: absolute;top:0;left: 0;background: linear-gradient(102.14deg, #6633B9 0%, #A176E8 91.73%);border-radius: 4px 0px 16px;color: #FFFFFF;width: auto;height: auto;font-size: 11px;padding: 4px 10px;}
 .home-mobile .header-content .hotsale-today .list-item .item .p-price {color: #FF2028;font-size: 12px;line-height: 24px;text-align: center;
 	overflow: hidden;
 	text-overflow: ellipsis;
@@ -387,7 +392,7 @@ table {border-collapse: collapse;border-spacing: 0;}
 .home-mobile .header-content .hotsale-today .progress,
 .home-mobile .flash-sale .list-all .item .p-sold .progress {height: 18px;background: #CCCCD0;border-radius: 100px;position: relative;margin-bottom: 0;}
 .home-mobile .header-content .hotsale-today .progress .progress-bar,
-.home-mobile .flash-sale .list-all .item .p-sold .progress .progress-bar {background: #EC5229;border-radius: 100px;}
+.home-mobile .flash-sale .list-all .item .p-sold .progress .progress-bar {background: #8155C9;border-radius: 100px;}
 .home-mobile .header-content .hotsale-today .progress .sr-only,
 .home-mobile .flash-sale .list-all .item .p-sold .progress .sr-only {clip: auto;font-size: 10px;font-weight: normal;line-height: 12px;margin: -6px 0 0;top: 50%;left: 0;width: 100%;height: auto;}
 .home-mobile .header-content .hotsale-today .progress-icon,
@@ -412,8 +417,8 @@ table {border-collapse: collapse;border-spacing: 0;}
 
 .home-mobile .menu-mobile {padding: 14px 12px;}
 .home-mobile .menu-mobile h3 {font-size: 15px;color: #E33806;text-transform: uppercase;margin-bottom: 8px;}
-.home-mobile .menu-container {padding: 4px 0 16px;background: #FFFFFF;border-radius: 5px;display: flex;align-items: center;justify-content: flex-start;}
-.home-mobile .menu-container li a {display: block;width: max-content;padding: 3px 10px;text-transform: capitalize;color: #3F241D;}
+.home-mobile .menu-container {padding: 4px 12px;/*background: #FFFFFF;border-radius: 5px;*/display: flex;align-items: center;justify-content: flex-start;}
+.home-mobile .menu-container li a {display: block;width: max-content;padding: 3px 10px;text-transform: capitalize;color: #FFFFFF;font-size: 14px;}
 .home-mobile .menu-container li:first-child a {padding-left: 0;}
 .home-mobile .menu-container li:last-child a {padding-right: 0;}
 .home-mobile .menu-container .frame-icon {width: 20px;height: 20px;display: inline-block;}
